# GraphAgentKit

./: .dockerignore  .env.example  .pre-commit-config.yaml  README.md  create_repo_structure.py  pyproject.toml  ruff.toml
.github/workflows/: ci-cd.yml
scripts/: check_tests.py
services/api/: main.py  pyproject.toml
services/api/tests/: test_main.py
services/chainlit-ui/: app.py  pyproject.toml
services/chainlit-ui/tests/: test_app.py
services/litellm-gateway/: config.yaml  main.py  pyproject.toml
services/litellm-gateway/tests/: test_adapters.py  test_agents.py
services/orchestrator/: api.py  graph.py  pyproject.toml
services/orchestrator/tests/: test_api.py  test_graph.py
services/shared/: pyproject.toml
services/shared/agentic_shared/: models.py
services/shared/tests/: test_shared.py
