[tool.uv.workspace]
members = ["services/*"]

[project]
name = "graphagentkit"
version = "0.1.0"
description = "Agentic system with LangGraph, LiteLLM, and sub-agents"
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "C90"]   # C90 = mccabe complexity

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.bandit]
exclude_dirs = ["tests"]
